--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </main>
 
     <aside>
-        <div class="benefits">
+        <section class="benefits">
             <div class="benefit-lead">
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" />
@@ -76,7 +76,7 @@
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
             </div>
-        </div>
+        </section>
     </aside>
 
     <footer>
