fix article and section tags

--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 
 <head>
     <meta charset="UTF-8" />
+    <!-- This code links html file to an external style sheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- This code defines the websites title that is shown in the browser's title bar -->
     <title>Horiseon</title>
 </head>
 
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- This code links header links to main content of the page -->
         <nav>
             <ul>
                 <li>
@@ -75,8 +78,8 @@
                 <p>
                     As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
                 </p>
-            </div>
-        </article>
+            </article>
+        </section>
     </aside>
 
     <footer>
