--- a/index.html
+++ b/index.html
@@ -3,16 +3,15 @@
 
 <head>
     <meta charset="UTF-8" />
-    <!-- This code links html file to an external style sheet -->
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- This code defines the websites title that is shown in the browser's title bar -->
+    <!-- Website browser's title -->
     <title>Horiseon</title>
 </head>
 
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- This code links header links to main content of the page -->
+        <!-- Links to main content-->
         <nav>
             <ul>
                 <li>
@@ -28,11 +27,13 @@
         </nav>
     </header>
 
+    <!-- Image below header -->  
     <section class="hero"></section>
 
     <main>
         <section class="content">
             <article id="search-engine-optimization" class="search-engine-optimization">
+                <!-- Order of img, h2, and p tags matter -->
                 <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="Notebook showing what seo does"/>
                 <h2>Search Engine Optimization</h2>
                 <p>
@@ -40,6 +41,7 @@
                 </p>
             </article>
             <article id="online-reputation-management" class="online-reputation-management">
+                <!-- Order of img, h2, and p tags matter -->
                 <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="Laptop showing reputation improving"/>
                 <h2>Online Reputation Management</h2>
                 <p>
@@ -47,6 +49,7 @@
                 </p>
             </article>
             <article id="social-media-marketing" class="social-media-marketing">
+                <!-- Order of img, h2, and p tags matter -->
                 <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="Marketing team around a table"/>
                 <h2>Social Media Marketing</h2>
                 <p>
@@ -56,9 +59,11 @@
         </section>
     </main>
 
+    <!-- Do not put aside tag inside main tag --> 
     <aside>
         <section class="benefits">
             <article class="benefit-lead">
+                <!-- Order of h3, img, and p tags matter -->
                 <h3>Lead Generation</h3>
                 <img src="./assets/images/lead-generation.png" alt="A gear leading to a money symbol"/>
                 <p>
@@ -66,6 +71,7 @@
                 </p>
             </article>
             <article class="benefit-brand">
+                <!-- Order of h3, img, and p tags matter -->
                 <h3>Brand Awareness</h3>
                 <img src="./assets/images/brand-awareness.png" alt="A person with a lightbulb as their head"/>
                 <p>
@@ -73,6 +79,7 @@
                 </p>
             </article>
             <article class="benefit-cost">
+                <!-- Order of h3, img, and p tags matter -->
                 <h3>Cost Management</h3>
                 <img src="./assets/images/cost-management.png" alt="A gear with 3 money symbols on it"/>
                 <p>
@@ -83,6 +90,7 @@
     </aside>
 
     <footer>
+        <!-- Order of h4 and p tags matter -->
         <h4>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
