--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <!-- Website browser's title -->
+    <!-- Browser's title -->
     <title>Horiseon</title>
 </head>
 
 <body>
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <!-- Links to main content-->
+        <!-- Links to main content -->
         <nav>
             <ul>
                 <li>
